# YOLOX-ROS

./: .gitignore  .gitmodules  README.md  bbox_ex_msgs.repos  demo.py  demo_ros2.py  requirements.txt  yolox-ros.repos  youtube-publisher.repos
.github/: FUNDING.yml
weights/: how_to_install_weights.txt
weights/onnx/: download.bash
weights/openvino/: .gitignore  README.md  download_openvino_s.bash  example_openvino.md  install.bash
weights/pytorch/: download.bash
weights/tensorrt/: convert.bash
weights/tensorrt/trtexec/: convert.bash
weights/tflite/: download_model.bash
yolox_ros_cpp/: CMakeLists.txt  README.md  package.xml
yolox_ros_cpp/docker/jetson/: README.md  docker-compose.yaml  dockerfile  setup.bash
yolox_ros_cpp/docker/onnxruntime/: docker-compose.yaml  dockerfile
yolox_ros_cpp/docker/openvino/: docker-compose.yaml  dockerfile  ros_entrypoint.sh
yolox_ros_cpp/docker/tensorrt/: docker-compose.yaml  dockerfile  ros_entrypoint.sh
yolox_ros_cpp/include/yolox_ros_cpp/: coco_names.hpp  core.hpp  utils.hpp  yolox_node.hpp  yolox_openvino.hpp
yolox_ros_cpp/launch/: yolox_openvino.launch.py
yolox_ros_cpp/src/: yolox_node.cpp  yolox_openvino.cpp
yolox_ros_cpp/yolox_cpp/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_cpp/include/yolox_cpp/: coco_names.hpp  config.h.in  core.hpp  tensorrt_logging.h  utils.hpp  yolox.hpp  yolox_onnxruntime.hpp  yolox_openvino.hpp  yolox_tensorrt.hpp  yolox_tflite.hpp
yolox_ros_cpp/yolox_cpp/src/: yolox_onnxruntime.cpp  yolox_openvino.cpp  yolox_tensorrt.cpp  yolox_tflite.cpp
yolox_ros_cpp/yolox_openvino/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_openvino/include/yolox_openvino/: coco_names.hpp  core.hpp  utils.hpp  yolox_openvino.hpp
yolox_ros_cpp/yolox_openvino/src/: yolox_openvino.cpp
yolox_ros_cpp/yolox_param/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_param/src/: yolox_parameters.yaml
yolox_ros_cpp/yolox_ros_cpp/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_ros_cpp/include/yolox_ros_cpp/: bboxes_from_yaml.hpp  using_service_v4l2camera.hpp  yolox_ros_cpp.hpp  yolox_ros_cpp_srv.hpp
yolox_ros_cpp/yolox_ros_cpp/launch/: yolox_onnxruntime.launch.py  yolox_openvino.launch.py  yolox_openvino_ncs2.launch.py  yolox_openvino_ncs2_picamera.launch.py  yolox_service_v4l2camera.launch.py  yolox_tensorrt.launch.py  yolox_tensorrt_jetson.launch.py  yolox_tensorrt_torch2trt.launch.py  yolox_tflite.launch.py
yolox_ros_cpp/yolox_ros_cpp/param/: nano.yaml  nano_jetson.yaml  nano_openvino.yaml  nano_torch2trt.yaml  nano_trtexec.yaml  s_torch2trt.yaml  s_trtexec.yaml  tiny.yaml  tiny_openvino.yaml  tiny_torch2trt.yaml  tiny_trtexec.yaml
yolox_ros_cpp/yolox_ros_cpp/src/: using_service_v4l2camera.cpp  yolox_ros_cpp.cpp  yolox_ros_cpp_srv.cpp
yolox_ros_py/: CMakeLists.txt  install_yolox_py.bash  package.xml  package.xml.old  setup.cfg  setup.py  setup.py.old
yolox_ros_py/exps/: yolox_nano.py
yolox_ros_py/launch/: demo_yolox_l.launch  demo_yolox_l.launch.py  demo_yolox_openvino.launch.py  demo_yolox_s.launch  demo_yolox_s.launch.py  yolox_lite_tflite_camera.launch.py  yolox_nano.launch.py  yolox_nano_cpu.launch.py  yolox_nano_onnx.launch.py  yolox_nano_onnx_camera.launch.py  yolox_nano_onnx_gazebo.launch.py  yolox_nano_onnx_picture.launch.py  yolox_nano_onnx_youtube.launch.py  yolox_nano_openvino.launch.py  yolox_nano_torch_cpu_camera.launch.py  yolox_nano_torch_gpu_camera.launch.py  yolox_s.launch.py  yolox_s_cpu.launch.py  yolox_s_gpu_simple.launch.py  yolox_s_openvino.launch.py  yolox_tflite.launch.py
yolox_ros_py/scripts/: yolox_ros.py
yolox_ros_py/yolox_ros_py/: README.md  demo.py  detector.py  yolox_onnx.py  yolox_openvino.py  yolox_ros.py  yolox_tflite.py
yolox_ros_py/yolox_ros_py/model/: model.tflite
yolox_ros_py/yolox_ros_py/module_tflite/: README.md  demo.py  detector.py
yolox_ros_py/yolox_ros_py/yolox_ros_py_utils/: utils.py
